site property set/get cache

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -157,7 +157,7 @@ h4 {
   display: block;
   // background-image: radial-gradient(ellipse at center, rgba(60, 60, 62, 0.1) 20%, rgba(60, 60, 62, 0.2) 40%, rgba(31, 31, 32, 0.8) 100%);
   .gradient;
-  height: 100vh;
+  //height: 100vh;
 }
 .link-shadow {
   color: inherit;
@@ -659,34 +659,7 @@ label:not(.form-check-label):not(.custom-file-label) {
     }
   }
 }
-//devices
-// .devices{
-//   &-header{
-//     font-size: 1.2rem;
-//     font-weight: normal;
-//     padding: 0 0 0 1rem;
-//   }
-//   &-detalies{
-//     .border-bottom;
-//     padding: 1rem 1.1rem .8rem 1rem;
-//       &-item{
-//         display: flex;
-//         flex-flow: column;
-//         justify-content: flex-start;
-//         align-items: flex-start;
-//         padding: 0 0 .4rem 0;
 
-//         @media (min-width: @mobile) {
-//           .flex;
-//           padding: 0 0 .8rem 0;
-//           }
-
-//         .val{
-//           margin-left: 2rem;
-//          }
-//       }
-//   }
-// }
 //device
 .devices {
   &-header {
@@ -694,6 +667,7 @@ label:not(.form-check-label):not(.custom-file-label) {
     font-weight: normal;
     padding: 0 0 0 1rem;
   }
+
   &-detalies {
     .border-bottom;
     padding: 1rem 1.1rem 0rem 1rem;
@@ -734,6 +708,7 @@ label:not(.form-check-label):not(.custom-file-label) {
 //device devocessearch
 .device {
   .flex();
+  justify-content: flex-start;
   flex-wrap: wrap;
   &-item {
     // background-image: radial-gradient(ellipse at center, rgba(60, 60, 62, 0.1) 20%, rgba(60, 60, 62, 0.2) 40%, rgba(31, 31, 32, 0.8) 100%);
