--- a/public/css/style.css
+++ b/public/css/style.css
@@ -167,7 +167,6 @@ h4 {
 .box {
   display: block;
   background-image: radial-gradient(ellipse at center, rgba(60, 60, 62, 0.1) 20%, rgba(60, 60, 62, 0.2) 40%, rgba(31, 31, 32, 0.8) 100%);
-  height: 100vh;
 }
 .link-shadow {
   color: inherit;
@@ -673,6 +672,7 @@ label:not(.form-check-label):not(.custom-file-label) {
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
+  justify-content: flex-start;
   flex-wrap: wrap;
 }
 .device-item {
