--- a/public/css/style.css
+++ b/public/css/style.css
@@ -117,6 +117,19 @@ h4 {
   width: 100%;
   margin: 0 auto;
 }
+.alert-close::before {
+  content: 'x';
+  display: block;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
+}
+.alert-close:hover::before {
+  cursor: pointer;
+}
 .cont_p {
   padding: 1rem 0.8rem;
 }
