--- a/public/css/style.less
+++ b/public/css/style.less
@@ -108,6 +108,20 @@ h4 {
   //   width: @desktop-area;
   // }
 }
+
+.alert-close::before {
+  content: 'x';
+  display: block;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
+}
+.alert-close:hover::before {
+  cursor: pointer;
+}
 .cont_p {
   padding: 1rem 0.8rem;
 }
